--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -14,13 +14,13 @@
   <!-- include source files here... -->
   <!-- <script src="src/Player.js"></script>
   <script src="src/Song.js"></script> -->
-  <script src="src/FizzBuzz.js"></script>
+  <script src="src/JsBuzz.js"></script>
 
   <!-- include spec files here... -->
   <!-- <script src="spec/SpecHelper.js"></script>
   <script src="spec/PlayerSpec.js"></script> -->
-  <script src="spec/FizzBuzzSpec.js"></script>
-  
+  <script src="spec/JsBuzzSpec.js"></script>
+
 
 </head>
 
